# simplegmock

./: Readme.md
TwoMotorsArdu/: Dockerfile  tests.md
TwoMotorsArdu/main/: CMakeLists.txt  Command1.cpp  HotSpot1.cpp  HotSpot1.hpp  Motors1.cpp  Motors1.hpp  MotorsInterface.hpp  SerialInterface.hpp  SerialReal.cpp  SerialReal.hpp  UDPConstants.hpp  Udp1.cpp  Udp1.hpp  UdpReader1.cpp  UdpReader1.hpp  UdpReaderInterface.hpp  WiFiUDPInterface.hpp  WiFiUDPReal.cpp  WiFiUDPReal.hpp  WifiConn1.cpp  WifiConn1.hpp  main.ino  setPass.hpp  setPass.html
TwoMotorsArdu/test/: CMakeLists.txt  MockMotors.hpp  MockSerial.hpp  MockUdpReader.hpp  MockWiFiUDP.hpp  Udp1IntegrationTest.cpp  Udp1Test.cpp  UdpReader1Test.cpp
ard-udpMotors/: CMakeLists.txt  Readme.md
ard-udpMotors/gtestDocker/: Dockerfile
ard-udpMotors/main/: CMakeLists.txt  Command1.hpp  HotSpot1.cpp  HotSpot1.hpp  Motors1.cpp  Motors1.hpp  SerialInterface.hpp  SerialReal.cpp  SerialReal.hpp  UDPConstants.hpp  Udp1.cpp  Udp1.hpp  WiFiUDPReal.cpp  WifiConn1.cpp  WifiConn1.hpp  main.ino  setPass.hpp
ard-udpMotors/test/: CMakeLists.txt  MockMotors.hpp  MockUdpReader.hpp  Udp1IntegrationTest.cpp  Udp1Test.cpp  UdpReader1Test.cpp
ts-TwoMotors/: Command1.ts  Direction.ts  Readme.md  Utils.ts  package-lock.json  package.json  udpClient.ts
ts-udpMotors/: Constants.ts  GamePadListener.ts  checkUdpClient.ts  udpClient.ts  udpMotors.ts
